--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@nuxt/fonts": "^0.7.2",
+    "@vueuse/motion": "^2.2.3",
     "nuxt": "^3.13.0",
     "nuxt-gsap-module": "^2.0.0",
     "vue": "latest"
